--- a/config.html
+++ b/config.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SwiftPro – Gamificação para Lojas</title>
+
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
+     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -111,24 +115,26 @@
                   <li class="dropdown-header">
                     <div class="fw-semibold" data-user-name>Usuário</div>
                     <small class="text-muted" data-user-email
-                      >usuario@swift.com</small
-                    >
+                      >usuario@swift.com</small>
                     <small class="text-muted d-block" data-user-role
-                      >Carregando...</small
-                    >
+                      >Carregando...</small>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="config.html"
-                      ><i class="bi bi-gear me-2"></i>Configurações</a
-                    >
+                    <a class="dropdown-item" href="config.html">
+                      <i class="bi bi-gear me-2"></i>Configurações
+                    </a>
                   </li>
-                  <!-- Itens removidos para visão do gerente -->
+                  <li>
+                    <a class="dropdown-item" href="historico.html">
+                      <i class="bi bi-clock-history me-2"></i>Histórico
+                    </a>
+                  </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#" data-logout
-                      ><i class="bi bi-box-arrow-right me-2"></i>Sair</a
-                    >
+                    <a class="dropdown-item" href="#" data-logout>
+                      <i class="bi bi-box-arrow-right me-2"></i>Sair
+                    </a>
                   </li>
                 </ul>
               </div>
