--- a/formulario_ajuda.html
+++ b/formulario_ajuda.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Ajuda</title>
+
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
+     
     <link href="assets/css/style.css" rel="stylesheet">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
