--- a/gerente.html
+++ b/gerente.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SwiftPro – Gamificação para Lojas</title>
+
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
+     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -79,18 +83,59 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-          <!-- Card 'Gerenciamento de Funcionários' removido -->
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="config.html"
-                      ><i class="bi bi-gear me-2"></i>Configurações</a
-                    >
+              <li class="nav-item">
+                <a class="nav-link" href="gerente.html">Área do Gerente</a>
+              </li>
+            </ul>
+            <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
+              <!-- Sininho de notificação -->
+              <div class="nav-item dropdown position-relative me-2">
+                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                  <i class="bi bi-bell-fill fs-4 text-brand"></i>
+                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                    3
+                    <span class="visually-hidden">notificações não lidas</span>
+                  </span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                  <li class="dropdown-header">Notificações</li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                </ul>
+              </div>
+              <!-- Menu dropdown do usuário -->
+              <div class="dropdown text-end">
+                <a
+                  href="#"
+                  class="d-flex align-items-center text-decoration-none dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=32&h=32&fit=crop&crop=face&auto=format"
+                    alt="Avatar do usuário"
+                    width="32"
+                    height="32"
+                    class="rounded-circle me-2"
+                    data-user-avatar
+                  />
+                  <span class="d-none d-lg-inline-block" data-user-name>Usuário</span>
+                </a>
+                <ul class="dropdown-menu text-small">
+                  <li class="dropdown-header">
+                    <div class="fw-semibold" data-user-name>Usuário</div>
+                    <small class="text-muted" data-user-email>usuario@swift.com</small>
+                    <small class="text-muted d-block" data-user-role>Carregando...</small>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#" data-logout
-                      ><i class="bi bi-box-arrow-right me-2"></i>Sair</a
-                    >
+                    <a class="dropdown-item" href="config.html"><i class="bi bi-gear me-2"></i>Configurações</a>
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#" data-logout><i class="bi bi-box-arrow-right me-2"></i>Sair</a>
                   </li>
                 </ul>
               </div>
@@ -201,6 +246,8 @@
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Aceitar disputa</button>
                   </div>
                   <hr class="my-4">
+            </div>
+
                   <!-- Colaborador 2 -->
                   <div class="d-flex align-items-center gap-3 mb-2">
                     <img src="https://randomuser.me/api/portraits/men/85.jpg" alt="Avatar" width="48" height="48" class="rounded-circle border shadow-sm">
@@ -223,8 +270,8 @@
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Aceitar disputa</button>
                   </div>
                 </div>
-              </div>
             </div>
+
           </div>
         </div>
               </div>
@@ -233,6 +280,80 @@
         </div>
         <!-- Card único: Gestão de Colaboradores -->
         <div class="row mb-4">
+  <!-- Card: Controle de Estoque -->
+  <div class="row mb-4">
+    <div class="col-12">
+      <div class="card soft-shadow border-0 rounded-4 p-4 bg-white">
+        <div class="d-flex align-items-center mb-3">
+          <div class="bg-brand-soft rounded-3 p-2 me-3 d-flex align-items-center justify-content-center" style="width:48px;height:48px;">
+            <i class="bi bi-flag text-brand fs-2"></i>
+          </div>
+          <div>
+            <h5 class="fw-bold mb-0">Criar Nova Missão</h5>
+            <div class="small text-muted">Defina uma missão para os colaboradores: diária, semanal ou mensal</div>
+          </div>
+        </div>
+        <form class="row g-3">
+          <div class="col-12 col-md-4">
+            <label for="nomeMissao2" class="form-label">Nome da Missão</label>
+            <input type="text" class="form-control" id="nomeMissao2" placeholder="Ex.: Vender 10 produtos" required>
+          </div>
+          <div class="col-12 col-md-4">
+            <label for="descricaoMissao2" class="form-label">Descrição</label>
+            <input type="text" class="form-control" id="descricaoMissao2" placeholder="Descreva o objetivo da missão" required>
+          </div>
+          <div class="col-12 col-md-2">
+            <label for="tipoMissao" class="form-label">Tipo de Missão</label>
+            <select class="form-select" id="tipoMissao" required>
+              <option value="diaria">Diária</option>
+              <option value="semanal">Semanal</option>
+              <option value="mensal">Mensal</option>
+            </select>
+          </div>
+          <div class="col-12 col-md-2 d-flex align-items-end justify-content-end">
+                        <button type="submit" class="btn btn-brand w-100" style="background-color: #ff6600; color: #fff; border: none;">Criar Missão</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  <div class="col-12 mt-3">
+    <div class="card soft-shadow border-0 rounded-4 p-4 bg-white">
+      <div class="d-flex align-items-center mb-3">
+        <div class="bg-brand-soft rounded-3 p-2 me-3 d-flex align-items-center justify-content-center" style="width:48px;height:48px;">
+          <i class="bi bi-gift text-brand fs-2"></i>
+        </div>
+        <div>
+          <h5 class="fw-bold mb-0">Recompensas</h5>
+          <div class="small text-muted">Cadastre e gerencie recompensas com métricas</div>
+        </div>
+      </div>
+      <form class="row g-3">
+        <div class="col-12 col-md-3">
+          <label for="nomeRecompensa" class="form-label">Nome</label>
+          <input type="text" class="form-control" id="nomeRecompensa" placeholder="Ex.: Vale Compras" required>
+        </div>
+        <div class="col-12 col-md-3">
+          <label for="tipoRecompensa" class="form-label">Tipo de recompensa</label>
+          <select class="form-select" id="tipoRecompensa" required>
+            <option value="gerente">Gerente</option>
+            <option value="ranking">Ranking</option>
+          </select>
+        </div>
+        <div class="col-12 col-md-2">
+          <label for="posicaoRanking" class="form-label">Posição do ranking</label>
+          <input type="number" class="form-control" id="posicaoRanking" placeholder="Ex.: 1" min="1">
+        </div>
+        <div class="col-12 col-md-2">
+          <label for="mesValidade" class="form-label">Mês de validade</label>
+          <input type="month" class="form-control" id="mesValidade" required>
+        </div>
+        <div class="col-12 col-md-2 d-flex align-items-end justify-content-end">
+          <button type="submit" class="btn btn-brand w-100" style="background-color: #ff6600; color: #fff; border: none;">Cadastrar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  </div>
           <div class="col-12">
             <div class="card soft-shadow border-0 rounded-4 p-4 bg-white">
               <div class="d-flex align-items-center mb-3">
@@ -259,10 +380,10 @@
                 </div>
                 <div class="col-12 col-md-2">
                   <label for="novoColaboradorCodigo" class="form-label">Código</label>
-                  <input type="text" class="form-control" id="novoColaboradorCodigo" placeholder="Ex.: C1234" required>
+                  <input type="text" class="form-control" id="novoColaboradorCodigo" placeholder="Ex.: C1234" required style="max-width: 100px;">
                 </div>
                 <div class="col-12 col-md-1 d-flex align-items-end justify-content-end">
-                  <button type="submit" class="btn btn-primary w-100">Adicionar</button>
+                  <button type="submit" class="btn btn-primary px-4 py-2" style="white-space:nowrap; min-width:180px;">Adicionar</button>
                 </div>
               </form>
               <div class="table-responsive">
@@ -307,8 +428,8 @@
                     </tr>
                     <tr>
                       <td>3</td>
-                      <td>Evelyn Souza</td>
-                      <td>evelyn.souza@swift.com</td>
+                      <td>Davi Sousa</td>
+                      <td>davi.sousa@swift.com</td>
                       <td>Estoquista</td>
                       <td>C3098</td>
                       <td>980</td>
