--- a/login.html
+++ b/login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swift</title>
 
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
+     
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
