--- a/ranking.html
+++ b/ranking.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SwiftPro – Gamificação para Lojas</title>
+
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
+     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -160,21 +164,12 @@
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h2 class="h4 m-0">Ranking</h2>
           <div class="d-flex gap-2">
-            <select
-              class="form-select form-select-sm"
-              aria-label="Filtrar período"
-            >
+            <label class="form-label mb-0 me-2" for="filtroPeriodo"><strong>Período:</strong></label>
+            <select id="filtroPeriodo" class="form-select form-select-sm" aria-label="Filtrar período">
               <option>Mês vigente</option>
               <option>Último mês</option>
               <option>Últimos 3 meses</option>
-            </select>
-            <select
-              class="form-select form-select-sm"
-              aria-label="Filtrar por loja"
-            >
-              <option>Todas as lojas</option>
-              <option>Vila Mariana</option>
-              <option>Moema</option>
+              <option>Personalizado</option>
             </select>
           </div>
         </div>
@@ -190,19 +185,20 @@
                       <th>Colaborador</th>
                       <th>Pontos</th>
                       <th>Nível</th>
+                      <th>Recompensa</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr><td>1</td><td>Lucas</td><td>1.280</td><td><span class="badge bg-warning text-dark">Ouro</span></td></tr>
-                    <tr><td>2</td><td>Evelyn</td><td>1.110</td><td><span class="badge bg-warning text-dark">Ouro</span></td></tr>
-                    <tr><td>3</td><td>Davi</td><td>980</td><td><span class="badge bg-secondary">Prata</span></td></tr>
-                    <tr><td>4</td><td>João</td><td>950</td><td><span class="badge bg-secondary">Prata</span></td></tr>
-                    <tr><td>5</td><td>Marina</td><td>900</td><td><span class="badge bg-info">Bronze</span></td></tr>
-                    <tr><td>6</td><td>Rafael</td><td>870</td><td><span class="badge bg-info">Bronze</span></td></tr>
-                    <tr><td>7</td><td>Patrícia</td><td>850</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
-                    <tr><td>8</td><td>André</td><td>820</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
-                    <tr><td>9</td><td>Camila</td><td>800</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
-                    <tr><td>10</td><td>Thiago</td><td>780</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
+                    <tr><td>1</td><td>Lucas</td><td>1.280</td><td><span class="badge bg-warning text-dark">Ouro</span></td><td>Vale Compras</td></tr>
+                    <tr><td>2</td><td>Evelyn</td><td>1.110</td><td><span class="badge bg-warning text-dark">Ouro</span></td><td>Kit Swift</td></tr>
+                    <tr><td>3</td><td>Davi</td><td>980</td><td><span class="badge bg-secondary">Prata</span></td><td>Dia de folga</td></tr>
+                    <tr><td>4</td><td>João</td><td>950</td><td><span class="badge bg-secondary">Prata</span></td><td>Dia de folga</td></tr>
+                    <tr><td>5</td><td>Marina</td><td>900</td><td><span class="badge bg-info">Bronze</span></td><td>Brinde</td></tr>
+                    <tr><td>6</td><td>Rafael</td><td>870</td><td><span class="badge bg-info">Bronze</span></td><td>Brinde</td></tr>
+                    <tr><td>7</td><td>Patrícia</td><td>850</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
+                    <tr><td>8</td><td>André</td><td>820</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
+                    <tr><td>9</td><td>Camila</td><td>800</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
+                    <tr><td>10</td><td>Thiago</td><td>780</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
                   </tbody>
                 </table>
               </div>
@@ -219,19 +215,20 @@
                       <th>Colaborador</th>
                       <th>Pontos</th>
                       <th>Título</th>
+                      <th>Recompensa</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr><td>1</td><td>Fagner</td><td>2.250</td><td><span class="badge bg-dark">Lenda Swift</span></td></tr>
-                    <tr><td>2</td><td>Lucas</td><td>2.020</td><td><span class="badge bg-dark">Lenda Swift</span></td></tr>
-                    <tr><td>3</td><td>Evelyn</td><td>1.720</td><td><span class="badge bg-secondary">Mestre</span></td></tr>
-                    <tr><td>4</td><td>João</td><td>1.500</td><td><span class="badge bg-secondary">Mestre</span></td></tr>
-                    <tr><td>5</td><td>Marina</td><td>1.320</td><td><span class="badge bg-warning">Ouro</span></td></tr>
-                    <tr><td>6</td><td>Rafael</td><td>1.200</td><td><span class="badge bg-warning">Ouro</span></td></tr>
-                    <tr><td>7</td><td>Patrícia</td><td>1.050</td><td><span class="badge bg-info">Prata</span></td></tr>
-                    <tr><td>8</td><td>André</td><td>980</td><td><span class="badge bg-info">Prata</span></td></tr>
-                    <tr><td>9</td><td>Camila</td><td>900</td><td><span class="badge bg-light text-dark">Bronze</span></td></tr>
-                    <tr><td>10</td><td>Thiago</td><td>850</td><td><span class="badge bg-light text-dark">Bronze</span></td></tr>
+                    <tr><td>1</td><td>Fagner</td><td>2.250</td><td><span class="badge bg-dark">Lenda Swift</span></td><td>Viagem</td></tr>
+                    <tr><td>2</td><td>Lucas</td><td>2.020</td><td><span class="badge bg-dark">Lenda Swift</span></td><td>Viagem</td></tr>
+                    <tr><td>3</td><td>Evelyn</td><td>1.720</td><td><span class="badge bg-secondary">Mestre</span></td><td>Vale Compras</td></tr>
+                    <tr><td>4</td><td>João</td><td>1.500</td><td><span class="badge bg-secondary">Mestre</span></td><td>Vale Compras</td></tr>
+                    <tr><td>5</td><td>Marina</td><td>1.320</td><td><span class="badge bg-warning">Ouro</span></td><td>Kit Swift</td></tr>
+                    <tr><td>6</td><td>Rafael</td><td>1.200</td><td><span class="badge bg-warning">Ouro</span></td><td>Kit Swift</td></tr>
+                    <tr><td>7</td><td>Patrícia</td><td>1.050</td><td><span class="badge bg-info">Prata</span></td><td>Dia de folga</td></tr>
+                    <tr><td>8</td><td>André</td><td>980</td><td><span class="badge bg-info">Prata</span></td><td>Dia de folga</td></tr>
+                    <tr><td>9</td><td>Camila</td><td>900</td><td><span class="badge bg-light text-dark">Bronze</span></td><td>Brinde</td></tr>
+                    <tr><td>10</td><td>Thiago</td><td>850</td><td><span class="badge bg-light text-dark">Bronze</span></td><td>Brinde</td></tr>
                   </tbody>
                 </table>
               </div>
