--- a/termo.html
+++ b/termo.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Termo de Uso - SwiftPro</title>
+
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
+     
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -38,15 +43,7 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <li class="nav-item">
-                <a class="nav-link" href="ranking.html">Ranking</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="missoes.html">Missões</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
-              </li>
+              <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
@@ -98,34 +95,16 @@
                 <ul class="dropdown-menu text-small">
                   <li class="dropdown-header">
                     <div class="fw-semibold" data-user-name>Usuário</div>
-                    <small class="text-muted" data-user-email
-                      >usuario@swift.com</small
-                    >
-                    <small class="text-muted d-block" data-user-role
-                      >Carregando...</small
-                    >
+                    <small class="text-muted" data-user-email>usuario@swift.com</small>
+                    <small class="text-muted d-block" data-user-role>Carregando...</small>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="config.html"
-                      ><i class="bi bi-gear me-2"></i>Configurações</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="historico.html"
-                      ><i class="bi bi-clock-history me-2"></i>Histórico</a
-                    >
-                  </li>
-                  <li data-manager-only>
-                    <a class="dropdown-item" href="gerente.html"
-                      ><i class="bi bi-person-gear me-2"></i>Área do Gerente</a
-                    >
+                    <a class="dropdown-item" href="config.html"><i class="bi bi-gear me-2"></i>Configurações</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#" data-logout
-                      ><i class="bi bi-box-arrow-right me-2"></i>Sair</a
-                    >
+                    <a class="dropdown-item" href="#" data-logout><i class="bi bi-box-arrow-right me-2"></i>Sair</a>
                   </li>
                 </ul>
               </div>
