--- a/termo.html
+++ b/termo.html
@@ -6,17 +6,32 @@
     <title>Termo de Uso - SwiftPro</title>
 
     <!-- Favicon -->
-     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
-     
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico.svg"
+      type="image/x-icon"
+    />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg sticky-top" aria-label="Navegação principal">
+    <nav
+      class="navbar navbar-expand-lg sticky-top"
+      aria-label="Navegação principal"
+    >
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <a
+          class="navbar-brand d-flex align-items-center gap-2"
+          href="index.html"
+        >
           <i class="bi bi-fire text-brand"></i>
           <strong>SwiftPro</strong>
         </a>
@@ -56,21 +71,52 @@
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
               <!-- Sininho de notificação -->
               <div class="nav-item dropdown position-relative me-2">
-                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                <a
+                  href="#"
+                  class="nav-link p-0"
+                  id="notificationDropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  title="Notificações"
+                  role="button"
+                >
                   <i class="bi bi-bell-fill fs-4 text-brand"></i>
-                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                  <span
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                    style="font-size: 0.7em"
+                  >
                     3
                     <span class="visually-hidden">notificações não lidas</span>
                   </span>
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                <ul
+                  class="dropdown-menu dropdown-menu-end mt-2"
+                  aria-labelledby="notificationDropdown"
+                  style="min-width: 280px"
+                >
                   <li class="dropdown-header">Notificações</li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="missoes.html"
+                      ><strong>Nova missão criada pelo gerente</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="ranking.html"
+                      ><strong>Você subiu de posição no ranking!</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><strong>Disputa resolvida pelo gerente</strong></a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item text-center text-muted" href="#"
+                      >Ver todas</a
+                    >
+                  </li>
                 </ul>
               </div>
               <!-- Menu dropdown do usuário -->
@@ -96,19 +142,29 @@
                 <ul class="dropdown-menu text-small">
                   <li class="dropdown-header">
                     <div class="fw-semibold" data-user-name>Usuário</div>
-                    <small class="text-muted" data-user-email>usuario@swift.com</small>
-                    <small class="text-muted d-block" data-user-role>Carregando...</small>
+                    <small class="text-muted" data-user-email
+                      >usuario@swift.com</small
+                    >
+                    <small class="text-muted d-block" data-user-role
+                      >Carregando...</small
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="config.html"><i class="bi bi-gear me-2"></i>Configurações</a>
+                    <a class="dropdown-item" href="config.html"
+                      ><i class="bi bi-gear me-2"></i>Configurações</a
+                    >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="historico.html"><i class="bi bi-clock-history me-2"></i>Histórico</a>
+                    <a class="dropdown-item" href="historico.html"
+                      ><i class="bi bi-clock-history me-2"></i>Histórico</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#" data-logout><i class="bi bi-box-arrow-right me-2"></i>Sair</a>
+                    <a class="dropdown-item" href="#" data-logout
+                      ><i class="bi bi-box-arrow-right me-2"></i>Sair</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -117,36 +173,72 @@
         </div>
       </div>
     </nav>
-    <main class="container py-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <h1 class="mb-4">Termo de Uso</h1>
-          <p>Bem-vindo ao SwiftPro! Antes de utilizar nossa plataforma, leia atentamente os termos abaixo:</p>
-          <h5>1. Aceitação dos Termos</h5>
-          <p>Ao acessar ou usar o SwiftPro, você concorda com estes Termos de Uso e com nossa Política de Privacidade.</p>
-          <h5>2. Uso da Plataforma</h5>
-          <p>Você se compromete a utilizar a plataforma de forma ética, respeitando as leis vigentes e os demais usuários.</p>
-          <h5>3. Privacidade e Dados</h5>
-          <p>Seus dados serão tratados conforme nossa Política de Privacidade. Não compartilhamos informações pessoais sem consentimento.</p>
-          <h5>4. Propriedade Intelectual</h5>
-          <p>Todo o conteúdo da plataforma é protegido por direitos autorais. É proibida a reprodução sem autorização.</p>
-          <h5>5. Responsabilidades</h5>
-          <p>O SwiftPro não se responsabiliza por danos decorrentes do uso indevido da plataforma.</p>
-          <h5>6. Alterações nos Termos</h5>
-          <p>Reservamo-nos o direito de alterar estes termos a qualquer momento. As mudanças serão comunicadas na plataforma.</p>
-          <h5>7. Contato</h5>
-          <p>Em caso de dúvidas, entre em contato pelo e-mail: suporte@swiftpro.com.br</p>
-          <hr />
-          <p class="text-muted small">Última atualização: 24 de setembro de 2025</p>
+
+    <div class="main-content">
+      <main class="container py-5">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <h1 class="mb-4">Termo de Uso</h1>
+            <p>
+              Bem-vindo ao SwiftPro! Antes de utilizar nossa plataforma, leia
+              atentamente os termos abaixo:
+            </p>
+            <h5>1. Aceitação dos Termos</h5>
+            <p>
+              Ao acessar ou usar o SwiftPro, você concorda com estes Termos de
+              Uso e com nossa Política de Privacidade.
+            </p>
+            <h5>2. Uso da Plataforma</h5>
+            <p>
+              Você se compromete a utilizar a plataforma de forma ética,
+              respeitando as leis vigentes e os demais usuários.
+            </p>
+            <h5>3. Privacidade e Dados</h5>
+            <p>
+              Seus dados serão tratados conforme nossa Política de Privacidade.
+              Não compartilhamos informações pessoais sem consentimento.
+            </p>
+            <h5>4. Propriedade Intelectual</h5>
+            <p>
+              Todo o conteúdo da plataforma é protegido por direitos autorais. É
+              proibida a reprodução sem autorização.
+            </p>
+            <h5>5. Responsabilidades</h5>
+            <p>
+              O SwiftPro não se responsabiliza por danos decorrentes do uso
+              indevido da plataforma.
+            </p>
+            <h5>6. Alterações nos Termos</h5>
+            <p>
+              Reservamo-nos o direito de alterar estes termos a qualquer
+              momento. As mudanças serão comunicadas na plataforma.
+            </p>
+            <h5>7. Contato</h5>
+            <p>
+              Em caso de dúvidas, entre em contato pelo e-mail:
+              suporte@swiftpro.com.br
+            </p>
+            <hr />
+            <p class="text-muted small">
+              Última atualização: 24 de setembro de 2025
+            </p>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
+
     <footer class="py-4 mt-4 bg-light border-top">
-      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
-        <div class="text-muted small">© 2025 SwiftPro. Todos os direitos reservados.</div>
+      <div
+        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
+      >
+        <div class="text-muted small">
+          © 2025 SwiftPro. Todos os direitos reservados.
+        </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html"
+            >Ajuda</a
+          >
         </div>
       </div>
     </footer>
